--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,10 +51,10 @@
         <div class="encabezadosDeseccion">
             <h1>¿Quienes Somos?</h1>
         </div>
-        <div class="ultimoGpdisputado" >
+        <div class="ultimoGpdisputado">
 
-                <img src="../ejemplo/img/astonmartinhorizontal1.png"
-                    alt="Fernando Alonso batallando por posicion en carrera sprint de brazil en vuelta 14">
+            <img src="../ejemplo/img/astonmartinhorizontal1.png"
+                alt="Fernando Alonso batallando por posicion en carrera sprint de brazil en vuelta 14">
 
         </div>
 
@@ -153,7 +154,9 @@
 
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
