se añadio la navbar de bootstrap, a su vez se modificaron diversos elementos de la navbar, como : Velocidad de aparicion, color de las fuentes en estado activo e inactivo, reemplazo de logo.

--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -23,34 +23,46 @@
 
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
+            <div>
+                <img class="imagen1">
+                <img src="../img/formula-1.png" alt="logo fanpage">
+            </div>
 
         </div>
-        <div>
-            <img class="imagen1">
-            <img src="../img/339680742_876210170133876_4104793023013670619_n.jpg" alt="logo fanpage">
+        <div class="nav">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../pages/gpDeabudhabi.html">Gp de
+                                    abudhabi</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/blog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/noticias.html">Noticias</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
-
-
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-
-                <li><a href="#">GP de Abudhabi</a></li>
-
-                <li><a href="Blog.html">Blog</a></li>
-
-                <li><a href="Noticias.html">Noticias</a></li>
-
-                <li><a href="contacto.html">Contacto</a></li>
-
-                <li><a href="#pie">Ir a pie de página</a></li>
-
-            </ul>
-        </nav>
-
     </header>
 
-    <!-- Para volver al index desde un html que se encuentra en una carpeta debo colocar dos puntos (..) mas slash (/) y me mostrara los directorios superiores-->
 
 
     <main>
