--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -20,24 +20,42 @@
     <header>
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
-            <img src="../img/339680742_876210170133876_4104793023013670619_n.jpg" alt="logo fanpage">
+            <div class="imagen1">
+                <img src="../img/formula-1.png" alt="logofanpage">
+            </div>
         </div>
-        <nav>
-            <ul>
+        <div class="nav">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
 
-                <li><a href="../index.html">Inicio</a></li>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/gpDeabudhabi.html">Gp de abudhabi</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/blog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                    href="../pages/noticias.html">Noticias</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            </li>
 
-                <li><a href="gpDeabudhabi.html">GP de abudhabi</a></li>
-
-                <li><a href="Blog.html">Blog</a></li>
-
-                <li><a href="#">Noticias</a></li>
-
-                <li><a href="contacto.html">Contacto</a></li>
-
-                <li><a href="#pie">Ir a pie de página</a></li>
-            </ul>
-        </nav>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
     <main>
         <h2>Noticias</h2>
