--- a/index.html
+++ b/index.html
@@ -14,37 +14,51 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,400&display=swap"
         rel="stylesheet">
+
+
     <title>The Green Bar</title>
+
 </head>
 
 <body>
-
-
     <header>
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
+            <div class="imagen1">
+                <img src="../ejemplo/img/formula-1.png" alt="logofanpage">
+            </div>
         </div>
+        <div class="nav">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
 
-        <div class="imagen1">
-            <img src="img/339680742_876210170133876_4104793023013670619_n.jpg" alt="logofanpage">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../ejemplo/index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/gpDeabudhabi.html">Gp de abudhabi</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/blog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/noticias.html">Noticias</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
-
-
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-
-                <li><a href="pages/gpDeabudhabi.html">GP de Abudhabi</a></li>
-
-                <li><a href="pages/Blog.html">Blog</a></li>
-
-                <li><a href="pages/Noticias.html">Noticias</a></li>
-
-                <li><a href="pages/contacto.html">Contacto</a></li>
-
-                <li><a href="#pie">Ir a pie de página</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
