se modificaron los 5htmls se ajustaron elementos para que conservaran la misma apariencia en las secciones. Se completaron ajustes referentes a la NAVBAR de bootstrap. Se corrigieron problemas de margin y problemas de padding en las mediaquerys. Se trabajaron los modelos responsivos en las resolciones 1024px 768px y 425.px. Ademas se ajustaron elementos del footer. Por ultimo se revisaron los codigos css para revisar que no existiera algun fallo tipografico.

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -21,7 +21,7 @@
     <header>
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
-            <div class="imagen1">
+            <div class="imagenLogo">
                 <img src="../img/formula-1.png" alt="logofanpage">
             </div>
         </div>
@@ -59,13 +59,12 @@
     </header>
 
     <main>
+        <div class="encabezadosDeseccion">
+            <h2>GreenBar Blog</h2>
+        </div>
 
-        <title>Blog</title>
 
-        <h2>GreenBar Blog</h2>
-
-        <section id="articulosDeblog">
-
+        <div class="articulosDeblog">
             <div class="box">
                 <article class="tarjeta">
 
@@ -117,12 +116,15 @@
                 </article>
             </div>
 
-        </section>
-
-
-
-
-
+        </div>
+        <div class="linkReferencial">
+            <div class=" enlaceReferencial1">
+                <a href="https://www.astonmartinf1.com/en-GB/" target="_blank ">Aston Martin F1 Team</a>
+            </div>
+            <div class="enlaceReferencial2">
+                <a href="../pages/gpDeabudhabi.html">Descubre más</a>
+            </div>
+        </div>
 
 
     </main>
@@ -131,33 +133,35 @@
 
 
     <footer id="pie">
-        <hr>
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="GP de abudhabi.html">GP de abudhabi</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="Noticias.html">Noticias</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+        <div class="listaPie1">
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="GP de abudhabi.html">GP de abudhabi</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </div>
+        <div class="listaPie2">
+            <ul>
+                <li>
+                    <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
+                            src="../img/instagram.png" a href="www.instagram.com" target="_blank">
+                    </a>
+                <li>
+                    <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
+                            src="../img/facebook.png" a href="www.facebook.com" target="_blank">
+                </li>
+                <li>
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
+                            href="www.x.com" target="_blank">
+                </li>
+                <li>
+                    <h4>Dirección</h4>
+                    <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+                </li>
+        </div>
 
-        <ul>
-            <li>
-                <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
-                        src="../img/instagram.png" a href="www.instagram.com" target="_blank">
-                </a>
-            <li>
-                <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
-                        src="../img/facebook.png" a href="www.facebook.com" target="_blank">
-            </li>
-            <li>
-                <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
-                        href="www.x.com" target="_blank">
-            </li>
-
-            <div class="encabezadosDeseccion">
-                <h4>Dirección</h4>
-            </div>
-            <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
