--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,77 +22,78 @@
   <header>
     <div class="tituloDelapagina">
       <h1>GreenBar</h1>
-      <div class="imagen1">
+      <div class="imagenLogo">
         <img src="../img/formula-1.png" alt="logofanpage">
       </div>
     </div>
 
-      <div class="nav">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../pages/gpDeabudhabi.html">Gp de abudhabi</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../pages/blog.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../pages/noticias.html">Noticias</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
-                </li>
+    <div class="nav">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/gpDeabudhabi.html">Gp de abudhabi</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/blog.html">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/noticias.html">Noticias</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
+              </li>
 
-              </ul>
-            </div>
+            </ul>
           </div>
-        </nav>
+        </div>
+      </nav>
 
   </header>
 
   <main>
-
-
-
-
+    <div class="encabezadosDeseccion">
+      <h2>Recibe anuncios y contenido especial </h2>
+    </div>
     <section>
       <div class="boxNewslatter">
         <h2>únete al newslatter</h2>
-        <form>
+        <div class="formularioDecontacto">
+          <form>
 
-          <div>
-            <label for="novedades">Deseo recibir novedades</label>
-            <input type="checkbox" name="" id="novedades">
-          </div>
+            <div class="labelsDeformulario">
+              <label for="novedades">Deseo recibir novedades <input type="checkbox" name="" id="novedades"> </label>
 
-          <div>
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required>
-          </div>
+            </div>
 
-          <div>
-            <label for="correo">Correo electrónico:</label>
-            <input type="email" id="correo" name="correo" required>
-          </div>
+            <div class="labelsDeformulario">
+              <label for="nombre">Nombre:</label>
+              <input type="text" id="nombre" name="nombre" required>
+            </div>
 
-          <div>
-            <label for="telefono">Teléfono:</label>
-            <input type="tel" id="telefono" name="telefono">
-          </div>
-          <div>
-            <button type="submit">Suscribirse</button>
-          </div>
-        </form>
+            <div class=" labelsDeformulario">
+              <label for="correo">Correo electrónico:</label>
+              <input type="email" id="correo" name="correo" required>
+            </div>
 
+            <div class=" labelsDeformulario">
+              <label for="telefono">Teléfono:</label>
+              <input type="tel" id="telefono" name="telefono">
+            </div>
+            <div class=" labelsDeformulario">
+              <button type="submit">Suscribirse</button>
+            </div>
+
+          </form>
+        </div>
 
       </div>
 
@@ -103,38 +104,49 @@
 
 
     </Section>
+    <div class="linkReferencial">
+      <div class=" enlaceReferencial1">
+        <a href="https://www.astonmartinf1.com/en-GB/" target="_blank ">Aston Martin F1 Team</a>
+      </div>
+      <div class="enlaceReferencial2">
+        <a href="../pages/gpDeabudhabi.html">Descubre más</a>
+      </div>
+    </div>
   </main>
 
   <footer id="pie">
+    <div class="listaPie1">
+      <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="gpDeabudhabi.html">GP de abudhabi</a></li>
+        <li><a href="Blog.html">Blog</a></li>
+        <li><a href="#">Noticias</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        
+      </ul>
+    </div>
+    <div class="listaPie2">
+      <ul>
+        <li>
+          <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img src="../img/instagram.png"
+              a href="www.instagram.com" target="_blank">
+          </a>
+        <li>
+          <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img src="../img/facebook.png" a
+              href="www.facebook.com" target="_blank">
+        </li>
+        <li>
+          <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
+              href="www.x.com" target="_blank">
+        </li>
+        <li>
+          <h4>Dirección</h4>
 
-    <ul>
-      <li><a href="../index.html">Inicio</a></li>
-      <li><a href="gpDeabudhabi.html">GP de abudhabi</a></li>
-      <li><a href="Blog.html">Blog</a></li>
-      <li><a href="#">Noticias</a></li>
-      <li><a href="contacto.html">Contacto</a></li>
-      <li><a href="#pie">Ir a pie de pagina</a></li>
-    </ul>
+          <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+        </li>
 
-    <ul>
-      <li>
-        <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img src="../img/instagram.png" a
-            href="www.instagram.com" target="_blank">
-        </a>
-      <li>
-        <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img src="../img/facebook.png" a
-            href="www.facebook.com" target="_blank">
-      </li>
-      <li>
-        <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a href="www.x.com"
-            target="_blank">
-      </li>
 
-      <div class="encabezadosDeseccion">
-        <h4>Dirección</h4>
-      </div>
-      <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
-    </ul>
+      </ul>
 
   </footer>
 
