--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
-            <div class="imagen1">
+            <div class="imagenLogo">
                 <img src="../ejemplo/img/formula-1.png" alt="logofanpage">
             </div>
         </div>
@@ -66,22 +66,12 @@
             <h1>¿Quienes Somos?</h1>
         </div>
         <div class="ultimoGpdisputado">
-
             <img src="../ejemplo/img/astonmartinhorizontal1.png"
                 alt="Fernando Alonso batallando por posicion en carrera sprint de brazil en vuelta 14">
-
         </div>
-
-
-
-
-
         <div class="encabezadosDeseccion">
             <h2><strong>Green Bar</strong></h2>
         </div>
-
-
-
         <p>Somos The Green Bar, una apasionada comunidad de amantes de la Fórmula Uno, en especial del equipo Aston
             Martin
             Cognizant Formula One Team. Nuestro corazón late al ritmo de los motores rugientes y las emociones que
@@ -120,50 +110,58 @@
             inventore
             animi delectus, aspernatur similique, cumque maxime iure nesciunt amet harum laborum.</p>
 
-        <a href="pages/gpDeabudhabi.html">Descubre más</a>
+
 
         </section>
 
 
-
-        <a href="https://www.astonmartinf1.com/en-GB/" target="_blank ">Aston Martin F1 Team</a>
-
+        <div class="linkReferencial">
+            <div class=" enlaceReferencial1">
+                <a href="https://www.astonmartinf1.com/en-GB/" target="_blank ">Aston Martin F1 Team</a>
+            </div>
+            <div class="enlaceReferencial2">
+                <a href="pages/gpDeabudhabi.html">Descubre más</a>
+            </div>
+        </div>
     </main>
 
 
 
 
     <footer id="pie">
+        <div class="listaPie1">
+            <ul>
 
-        <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="pages/gpDeabudhabi.html">GP de Abudhabi</a></li>
+                <li><a href="pages/Blog.html">Blog</a></li>
+                <li><a href="pages/Noticias.html">Noticias</a></li>
+                <li><a href="pages/contacto.html">Contacto</a></li>
 
-            <li><a href="#">Inicio</a></li>
-            <li><a href="pages/gpDeabudhabi.html">GP de Abudhabi</a></li>
-            <li><a href="pages/Blog.html">Blog</a></li>
-            <li><a href="pages/Noticias.html">Noticias</a></li>
-            <li><a href="pages/contacto.html">Contacto</a></li>
+            </ul>
+        </div>
+        <div class="listaPie2">
+            <ul>
+                <li>
+                    <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
+                            src="../ejemplo/img/instagram.png" a href="www.instagram.com" target="_blank">
+                    </a>
+                <li>
+                    <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
+                            src="../ejemplo/img/facebook.png" a href="www.facebook.com" target="_blank">
+                </li>
+                <li>
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../ejemplo/img/gorjeo.png"
+                            a href="www.x.com" target="_blank">
+                </li>
+                <li>
+                    <h4>Dirección</h4>
+                    <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+                </li>
 
-        </ul>
 
-        <ul>
-            <li>
-                <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
-                        src="../ejemplo/img/instagram.png" a href="www.instagram.com" target="_blank">
-                </a>
-            <li>
-                <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
-                        src="../ejemplo/img/facebook.png" a href="www.facebook.com" target="_blank">
-            </li>
-            <li>
-                <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../ejemplo/img/gorjeo.png" a
-                        href="www.x.com" target="_blank">
-            </li>
-
-            <div class="encabezadosDeseccion">
-                <h4>Dirección</h4>
-            </div>
-            <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
-        </ul>
+            </ul>
+        </div>
     </footer>
 
 
