--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -24,7 +24,7 @@
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
             <div>
-                <img class="imagen1">
+                <img class="imagenLogo">
                 <img src="../img/formula-1.png" alt="logo fanpage">
             </div>
 
@@ -70,11 +70,12 @@
             <h2>Resumen de un gp trepidante</h2>
         </div>
         <div class="ultimoGpdisputado">
-
-
-            <div class="imagenesVideos">
-                <img src="../img/astonmartinhorizontal2.webp" alt="Fernando Alonso entrando en linea de meta">
-            </div>
+            <img src="../img/astonmartinhorizontal2.webp" alt="Fernando Alonso entrando en linea de meta">
+        </div>
+        <div class="encabezadosDeseccion">
+            <h2><strong>Una temporada increible</strong></h2>
+        </div>
+        <div class="textosDelgp">
             <p>La temporada de Fórmula 1 llegó a su emocionante conclusión en el Circuito de Yas Marina, en Abu Dabi. La
                 carrera
                 de 51 vueltas mantuvo a los fanáticos al borde de sus asientos desde la salida hasta la bandera a
@@ -106,19 +107,28 @@
                 aficionados
                 nunca olvidarán.</p>
         </div>
-
+        </div>
+        <div class="linkReferencial">
+            <div class=" enlaceReferencial1">
+                <a href="https://www.astonmartinf1.com/en-GB/" target="_blank ">Aston Martin F1 Team</a>
+            </div>
+            <div class="enlaceReferencial2">
+                <a href="../pages/gpDeabudhabi.html">Descubre más</a>
+            </div>
+        </div>
     </main>
 
     <footer id="pie">
-
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="#">GP de Abudhabi</a></li>
-            <li><a href="Blog.html">Blog</a></li>
-            <li><a href="Noticias.html">Noticias</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-
+        <div class="listaPie1">
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="#">GP de Abudhabi</a></li>
+                <li><a href="Blog.html">Blog</a></li>
+                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </div>
+        <div class="listaPie2">
         <ul>
             <li>
                 <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
@@ -132,12 +142,12 @@
                 <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
                         href="www.x.com" target="_blank">
             </li>
-
-            <div class="encabezadosDeseccion">
+            <li>
                 <h4>Dirección</h4>
-            </div>
-            <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+                <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+            </li>
         </ul>
+    </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
