--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -20,7 +20,7 @@
     <header>
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
-            <div class="imagen1">
+            <div class="imagenLogo">
                 <img src="../img/formula-1.png" alt="logofanpage">
             </div>
         </div>
@@ -58,7 +58,9 @@
         </div>
     </header>
     <main>
-        <h2>Noticias</h2>
+        <div class="encabezadosDeseccion">
+            <h2>GreenBar Noticias</h2>
+        </div>
         <div class="box">
 
             <article class="tarjeta">
@@ -161,38 +163,48 @@
                 </p>
             </article>
         </div>
+        <div class="linkReferencial">
+            <div class=" enlaceReferencial1">
+                <a href="https://www.astonmartinf1.com/en-GB/" target="_blank ">Aston Martin F1 Team</a>
+            </div>
+            <div class="enlaceReferencial2">
+                <a href="../pages/gpDeabudhabi.html">Descubre más</a>
+            </div>
+        </div>
     </main>
 
 
     <footer id="pie">
-        <hr>
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="GP de abudhabi.html">GP de abudhabi</a></li>
-            <li><a href="Blog.html">Blog</a></li>
-            <li><a href="#">Noticias</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="#pie">Ir a pie de pagina</a></li>
-        </ul>
-
-        <ul>
-            <li>
-                <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
-                        src="../img/instagram.png" a href="www.instagram.com" target="_blank">
-                </a>
-            <li>
-                <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
-                        src="../img/facebook.png" a href="www.facebook.com" target="_blank">
-            </li>
-            <li>
-                <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
-                        href="www.x.com" target="_blank">
-            </li>
-
-            <div class="encabezadosDeseccion">
-                <h4>Dirección</h4>
-            </div>
-            <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+        <div class="listaPie1">
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="GP de abudhabi.html">GP de abudhabi</a></li>
+                <li><a href="Blog.html">Blog</a></li>
+                <li><a href="#">Noticias</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                
+            </ul>
+        </div>
+        <div class="listaPie1">
+            <ul>
+                <li>
+                    <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
+                            src="../img/instagram.png" a href="www.instagram.com" target="_blank">
+                    </a>
+                <li>
+                    <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
+                            src="../img/facebook.png" a href="www.facebook.com" target="_blank">
+                </li>
+                <li>
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
+                            href="www.x.com" target="_blank">
+                </li>
+                <li>
+                    <h4>Dirección</h4>
+                    <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+                </li>
+        </div>
+       
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
