se ejecutaron diversos cambios en los 5 htmls se añadieron divs para poder manipular mejor el website en las versiones mobile, tablet y desktop. se añadio una carrusel bootstrap y se modifico para poder insertar mas imagenes de las que trae por defecto, se ejecutaron mas cambios a nivel de imagenes

--- a/index.html
+++ b/index.html
@@ -72,49 +72,132 @@
         <div class="encabezadosDeseccion">
             <h2><strong>Green Bar</strong></h2>
         </div>
-        <p>Somos The Green Bar, una apasionada comunidad de amantes de la Fórmula Uno, en especial del equipo Aston
-            Martin
-            Cognizant Formula One Team. Nuestro corazón late al ritmo de los motores rugientes y las emociones que
-            solo
-            la
-            F1 puede ofrecer.
-
-            En Green Bar, estamos unidos por nuestra devoción a dos talentosos pilotos: Fernando Alonso y Lance
-            Stroll.
-            Acompañamos a nuestro equipo en cada carrera, siguiendo a Aston Martin F1 por los circuitos más
-            emblemáticos
-            del
-            mundo. Desde las emocionantes calles de Mónaco hasta los rápidos trazados de Monza, estamos ahí para
-            alentar
-            y
-            apoyar a nuestros héroes en cada curva y recta.
-
-            Nuestra pasión por Aston Martin F1 es inquebrantable, y compartimos ese amor por el automovilismo en
-            cada
-            viaje
-            juntos. Únete a nosotros en esta emocionante aventura, donde el rugir de los motores y la emoción de la
-            competencia son la melodía de nuestras vidas. ¡Súmate a Green Bar y comparte la pasión por Aston Martin
-            F1!
+        <div class="textoDelmain">
+            <p>Somos The Green Bar, una apasionada comunidad de amantes de la Fórmula Uno, en especial del equipo Aston
+                Martin
+                Cognizant Formula One Team. Nuestro corazón late al ritmo de los motores rugientes y las emociones que
+                solo
+                la
+                F1 puede ofrecer.
+                <br>
+                En Green Bar, estamos unidos por nuestra devoción a dos talentosos pilotos: Fernando Alonso y Lance
+                Stroll.
+                Acompañamos a nuestro equipo en cada carrera, siguiendo a Aston Martin F1 por los circuitos más
+                emblemáticos
+                del
+                mundo. Desde las emocionantes calles de Mónaco hasta los rápidos trazados de Monza, estamos ahí para
+                alentar
+                y
+                apoyar a nuestros héroes en cada curva y recta.
+                <br>
+                Nuestra pasión por Aston Martin F1 es inquebrantable, y compartimos ese amor por el automovilismo en
+                cada
+                viaje
+                juntos. Únete a nosotros en esta emocionante aventura, donde el rugir de los motores y la emoción de la
+                competencia son la melodía de nuestras vidas. ¡Súmate a Green Bar y comparte la pasión por Aston Martin
+                F1!
+                <br>
+                Nuestra pasión por Aston Martin F1 es inquebrantable, y compartimos ese amor por el automovilismo en
+                cada viaje juntos. Únete a nosotros en esta emocionante aventura, donde el rugir de los motores y la
+                emoción de la
+                competencia son la melodía de nuestras vidas. ¡Súmate a Green Bar y comparte la pasión por Aston Martin
+                F1!
+        </div>
+        <div class="imagenDelmain">
+            <img src="../ejemplo/img/352119536_1144914303567158_4485285263322083808_n.jpg"
+                alt="Fernando Alonso entrando en los pits en clasificación">
+        </div>
+        <div class="imagenDelmain2">
+            <img src="../ejemplo/img/339680742_876210170133876_4104793023013670619_n.jpg"
+                alt="Aston martin en practicas y testeo de neumaticos curva 1 barcelona">
+        </div>
+        <div class="imagenDelmain3">
+            <img src="../ejemplo/img/386262754_264166619940662_2609310702596619209_n.jpg"
+                alt="Jornada de entrenamientos en austin texas en un  atardecer ">
+        </div>
         </p>
-
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut quisquam sit nihil nemo, hic minus maxime
-            repellendus? Atque mollitia veniam, vel iste ad quam quibusdam quaerat non quis quia reprehenderit
-            voluptatibus
-            hic est blanditiis quasi voluptate maiores minus voluptas dolorum officia. Optio asperiores possimus
-            aperiam
-            odit doloribus laudantium unde enim, in non, illo accusantium dolores pariatur. Cumque autem quis
-            accusantium
-            unde mollitia, aspernatur voluptate quam quas eum nulla repudiandae nisi recusandae, facilis veritatis
-            quo
-            eveniet nemo vel animi. Perspiciatis fugiat laborum iste adipisci non, similique facere! Sequi facilis
-            inventore
-            animi delectus, aspernatur similique, cumque maxime iure nesciunt amet harum laborum.</p>
-
-
-
         </section>
 
 
+
+        <div class="encabezadosDeseccion">
+            <h2><strong>Highlights de la temporada 2023</strong></h2>
+        </div>
+        <div id="carouselExampleCaptions" class="carousel slide">
+
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Diapositiva 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Diapositiva 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Diapositiva 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                    aria-label="Diapositiva 4"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                    aria-label="Diapositiva 5"></button>
+            </div>
+
+
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../ejemplo/img/Fernando_copy.jpeg" class="d-block w-100"
+                        alt="Fernando Alonso en prácticas libres 1">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Primera etiqueta de diapositiva</h5>
+                        <p>Algún contenido de marcador de posición representativo para la primera diapositiva.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img src="../ejemplo/img/Equipo_copy.jpeg" class="d-block w-100"
+                        alt="Equipo de Aston Martin viendo la carrera a través de los monitores">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Segunda etiqueta de diapositiva</h5>
+                        <p>Algún contenido de marcador de posición representativo para la segunda diapositiva.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img src="../ejemplo/img/Lance_copy.jpeg" class="d-block w-100"
+                        alt="Lance y Fernando en la pretemporada del año 2023">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Etiqueta de la tercera diapositiva</h5>
+                        <p>Algún contenido de marcador de posición representativo para la tercera diapositiva.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img src="../ejemplo/img/publico_copy.jpeg" class="d-block w-100"
+                        alt="Fanaticada del equipo Aston Martin saludando desde el paddock del premio de Barcelona">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Cuarta etiqueta de diapositiva</h5>
+                        <p>Algún contenido de marcador de posición representativo para la cuarta diapositiva.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img src="../ejemplo/img/monoplaza de fernando alonso previo a la salida.jpeg" class="d-block w-100"
+                        alt="Fernando Alonso en su monoplaza previo a la salida">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Etiqueta de la quinta diapositiva</h5>
+                        <p>Algún contenido de marcador de posición representativo para la quinta diapositiva.</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
+        </div>
         <div class="linkReferencial">
             <div class=" enlaceReferencial1">
                 <a href="https://www.astonmartinf1.com/en-GB/" target="_blank ">Aston Martin F1 Team</a>
@@ -154,11 +237,18 @@
                     <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../ejemplo/img/gorjeo.png"
                             a href="www.x.com" target="_blank">
                 </li>
-                <li>
-                    <h4>Dirección</h4>
-                    <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
-                </li>
 
+                <div class="direccion">
+                    <li>
+                        <h4>Dirección</h4>
+                        <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+                    </li>
+                </div>
+                <div class="direccion2">
+                    <li>
+                        <iframe src="https://maps.app.goo.gl/bNyzfLwzWvMsFfuA9" frameborder="0"></iframe>
+                    </li>
+                </div>
 
             </ul>
         </div>
