--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -70,10 +70,10 @@
             <h2>Resumen de un gp trepidante</h2>
         </div>
         <div class="ultimoGpdisputado">
-            <img src="../img/astonmartinhorizontal2.webp" alt="Fernando Alonso entrando en linea de meta">
+            <img src="../img/Fernando entrando al cocpit.jpeg" alt="Fernando Alonso entrando a su monoplaza previo a la jornada de clasificación">
         </div>
         <div class="encabezadosDeseccion">
-            <h2><strong>Una temporada increible</strong></h2>
+            <h2><strong>Una temporada increíble</strong></h2>
         </div>
         <div class="textosDelgp">
             <p>La temporada de Fórmula 1 llegó a su emocionante conclusión en el Circuito de Yas Marina, en Abu Dabi. La
@@ -99,6 +99,14 @@
                 emocionante duelo por la cuarta posición, que finalmente se decantó a favor de Ricciardo en las últimas
                 vueltas.
 
+                Esta carrera en Abu Dabi ha sido una deslumbrante forma de cerrar la temporada de Fórmula 1, llena de
+                emoción y
+                giros inesperados. La lucha por el campeonato, la estrategia de neumáticos de Alonso y las emocionantes
+                batallas
+                en pista han dejado una marca indeleble en la historia de la F1. Sin duda, una temporada que los
+                aficionados
+                nunca olvidarán.
+                
                 Esta carrera en Abu Dabi ha sido una deslumbrante forma de cerrar la temporada de Fórmula 1, llena de
                 emoción y
                 giros inesperados. La lucha por el campeonato, la estrategia de neumáticos de Alonso y las emocionantes
