cambios de rutas
Cambio de rutas absolutas a relativas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
             <div class="imagenLogo">
-                <img src="../ejemplo/img/formula-1.png" alt="logofanpage">
+                <img src="./img/formula-1.png" alt="logofanpage">
             </div>
         </div>
         <div class="nav">
@@ -39,7 +39,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../ejemplo/index.html">Inicio</a>
+                                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="pages/gpDeabudhabi.html">Gp de abudhabi</a>
@@ -66,7 +66,7 @@
             <h1>¿Quienes Somos?</h1>
         </div>
         <div class="ultimoGpdisputado">
-            <img src="../ejemplo/img/astonmartinhorizontal1.png"
+            <img src="./img/astonmartinhorizontal1.png"
                 alt="Fernando Alonso batallando por posicion en carrera sprint de brazil en vuelta 14">
         </div>
         <div class="encabezadosDeseccion">
@@ -104,15 +104,15 @@
                 F1!
         </div>
         <div class="imagenDelmain">
-            <img src="../ejemplo/img/352119536_1144914303567158_4485285263322083808_n.jpg"
+            <img src="./img/352119536_1144914303567158_4485285263322083808_n.jpg"
                 alt="Fernando Alonso entrando en los pits en clasificación">
         </div>
         <div class="imagenDelmain2">
-            <img src="../ejemplo/img/339680742_876210170133876_4104793023013670619_n.jpg"
+            <img src="./img/339680742_876210170133876_4104793023013670619_n.jpg"
                 alt="Aston martin en practicas y testeo de neumaticos curva 1 barcelona">
         </div>
         <div class="imagenDelmain3">
-            <img src="../ejemplo/img/386262754_264166619940662_2609310702596619209_n.jpg"
+            <img src="./img/386262754_264166619940662_2609310702596619209_n.jpg"
                 alt="Jornada de entrenamientos en austin texas en un  atardecer ">
         </div>
         </p>
@@ -141,7 +141,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../ejemplo/img/Fernando_copy.jpeg" class="d-block w-100"
+                    <img src="./img/Fernando_copy.jpeg" class="d-block w-100"
                         alt="Fernando Alonso en prácticas libres 1">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Primera etiqueta de diapositiva</h5>
@@ -150,7 +150,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="../ejemplo/img/Equipo_copy.jpeg" class="d-block w-100"
+                    <img src="./img/Equipo_copy.jpeg" class="d-block w-100"
                         alt="Equipo de Aston Martin viendo la carrera a través de los monitores">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Segunda etiqueta de diapositiva</h5>
@@ -159,7 +159,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="../ejemplo/img/Lance_copy.jpeg" class="d-block w-100"
+                    <img src="./img/Lance_copy.jpeg" class="d-block w-100"
                         alt="Lance y Fernando en la pretemporada del año 2023">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Etiqueta de la tercera diapositiva</h5>
@@ -168,7 +168,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="../ejemplo/img/publico_copy.jpeg" class="d-block w-100"
+                    <img src="./img/publico_copy.jpeg" class="d-block w-100"
                         alt="Fanaticada del equipo Aston Martin saludando desde el paddock del premio de Barcelona">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Cuarta etiqueta de diapositiva</h5>
@@ -177,7 +177,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="../ejemplo/img/monoplaza de fernando alonso previo a la salida.jpeg" class="d-block w-100"
+                    <img src="./img/monoplaza de fernando alonso previo a la salida.jpeg" class="d-block w-100"
                         alt="Fernando Alonso en su monoplaza previo a la salida">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Etiqueta de la quinta diapositiva</h5>
@@ -227,14 +227,14 @@
             <ul>
                 <li>
                     <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
-                            src="../ejemplo/img/instagram.png" a href="www.instagram.com" target="_blank">
+                            src="./img/instagram.png" a href="www.instagram.com" target="_blank">
                     </a>
                 <li>
                     <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
-                            src="../ejemplo/img/facebook.png" a href="www.facebook.com" target="_blank">
+                            src="./img/facebook.png" a href="www.facebook.com" target="_blank">
                 </li>
                 <li>
-                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../ejemplo/img/gorjeo.png"
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="./img/gorjeo.png"
                             a href="www.x.com" target="_blank">
                 </li>
 
