--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -25,7 +25,7 @@
             <h1>GreenBar</h1>
             <div>
                 <img class="imagenLogo">
-                <img src="../img/formula-1.png" alt="logo fanpage">
+                <img src="./img/formula-1.png" alt="logo fanpage">
             </div>
 
         </div>
