ajuste de rutas
ajuste de rutas a relativas

--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
             <ul>
 
                 <li><a href="#">Inicio</a></li>
-                <li><a href="pages/gpDeabudhabi.html">GP de Abudhabi</a></li>
-                <li><a href="pages/Blog.html">Blog</a></li>
-                <li><a href="pages/Noticias.html">Noticias</a></li>
-                <li><a href="pages/contacto.html">Contacto</a></li>
+                <li><a href="./pages/gpDeabudhabi.html">GP de Abudhabi</a></li>
+                <li><a href="./pages/Blog.html">Blog</a></li>
+                <li><a href="./pages/Noticias.html">Noticias</a></li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
 
             </ul>
         </div>
