correccion de tipografica
Correccion tipografica del footer para las rutas relativas

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 
                 <li><a href="#">Inicio</a></li>
                 <li><a href="./pages/gpDeabudhabi.html">GP de Abudhabi</a></li>
-                <li><a href="./pages/Blog.html">Blog</a></li>
-                <li><a href="./pages/Noticias.html">Noticias</a></li>
+                <li><a href="./pages/blog.html">Blog</a></li>
+                <li><a href="./pages/noticias.html">Noticias</a></li>
                 <li><a href="./pages/contacto.html">Contacto</a></li>
 
             </ul>
