--- a/pages/blog.html
+++ b/pages/blog.html
@@ -136,9 +136,9 @@
         <div class="listaPie1">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="GP de abudhabi.html">GP de abudhabi</a></li>
+                <li><a href="gpDeabudhabi.html">GP de abudhabi</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="noticias.html">Noticias</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
