--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -131,8 +131,8 @@
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="#">GP de Abudhabi</a></li>
-                <li><a href="Blog.html">Blog</a></li>
-                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="noticias.html">Noticias</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
