--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -118,7 +118,7 @@
       <ul>
         <li><a href="../index.html">Inicio</a></li>
         <li><a href="gpDeabudhabi.html">GP de abudhabi</a></li>
-        <li><a href="Blog.html">Blog</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="#">Noticias</a></li>
         <li><a href="contacto.html">Contacto</a></li>
 
