--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -178,8 +178,8 @@
         <div class="listaPie1">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="GP de abudhabi.html">GP de abudhabi</a></li>
-                <li><a href="Blog.html">Blog</a></li>
+                <li><a href="gpDeabudhabi.html">GP de abudhabi</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#">Noticias</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
                 
