--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -23,8 +23,8 @@
 
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
-            <div>
-                <img class="imagenLogo">
+            <div class="imagenLogo">
+            
                 <img src="../img/formula-1.png" alt="logo fanpage">
             </div>
 
