se adjunto element stlye a secciones del htlm

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -22,7 +22,7 @@
         <div class="tituloDelapagina">
             <h1>GreenBar</h1>
             <div class="imagenLogo">
-                <img src="../img/formula-1.png" alt="logofanpage">
+                <img src="./img/formula-1.png" alt="logofanpage" style="width: 100%;">
             </div>
         </div>
         <div class="nav">
