--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,7 +23,7 @@
     <div class="tituloDelapagina">
       <h1>GreenBar</h1>
       <div class="imagenLogo">
-        <img src="./img/formula-1.png" alt="logofanpage" style="width: 100%;">
+        <img src="../img/formula-1.png" alt="logofanpage" style="width: 100%;">
       </div>
     </div>
 
